# linux_programming

copy_prac/: copy.c  copy2.txt
gyro_prac/: a.out
led_prac/: gpioled.c  led.py  test  test.py
limit/: limit  limit.c
loop/: loop  loop.c
msgq/: msg_client  msg_client.c  msg_server  msg_server.c
named_pipe/: fifo_client  fifo_client.c  fifo_server  fifo_server.c
pipe/: pipe  pipe.c
semaphore/: sem.c
siganl/: handleSignal.c  signal
tcp_communication/: tcp_client  tcp_server.c  tcv_client.c
tcp_multi_thread/: CMakeCache.txt  CMakeLists.txt  Makefile  clnt_connection.c  cmake_install.cmake  index.html  send_data.c  send_error.c  send_ok.c  thread_functions.h  webserver.c
tcp_multi_thread/source/: clnt_connection.c  send_data.c  send_error.c  send_ok.c  webserver.c
thread/: thread  thread.c
udp_communication/: udp_client.c
